# RaspberrpPi_JLX_LCD

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  aarch64-buildroot.cmake  main.c  st7302_impl.c  st75256_impl.c  st75256_lvgl_impl.c  user_tasks.c
fonts/: jf_dot_jiskan16.c  unica_one_12.c
images/: pixiv_87209173.c
include/: config.h  lv_conf.h  st7302_impl.h  st7302_lvgl_impl.h  st75256_impl.h  st75256_lvgl_impl.h  user_tasks.h
lib/: CMakeLists.txt
lib/st7302_lcd/: st7302_lcd.c  st7302_lcd.h
lib/st75256_lcd/: st75256_lcd.c  st75256_lcd.h
src/: st7302_impl.c  st7302_lvgl_impl.c  st75256_impl.c  user_tasks.c
tasks/: task_hello.c  task_load.c  task_lvgl.c
